hphp/test/slow/inout/bad-call-1.php.expectf
Fatal error: Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. in %s/bad-call-1.php on line 6
